# BlogerMenia

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html  home.html
blog/templates/includes/: footer.html  header.html
bloggermenia/: asgi.py  settings.py  urls.py  wsgi.py
blogs/: admin.py  api.py  apps.py  forms.py  models.py  signals.py  urls.py
blogs/Views/: account.py  blogs.py  home.py  playlists.py
blogs/Views/chatapp/: __init__.py  prompts.py  schemas.py  service.py  state.py
blogs/migrations/: 0001_initial.py  0002_faq.py  0002_remove_blog_tags_delete_tag.py  0003_remove_blog_featured_blog_ispublished.py  0003_testimonial.py  0004_playlist.py  0005_bloglike.py  0006_blog_embedding.py
blogs/templates/: blog_confirm_delete.html  blog_create.html  blog_detail.html  blog_list.html  blog_list_by_user.html  blog_list_by_user.html.backup  blog_update.html  playlist_confirm_delete.html  playlist_detail.html  playlist_form.html
blogs/templates/partials/: empty_state.html  pagination.html
notes/: forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/notes/: my_note_list.html  note_detail.html  note_feed.html  note_form.html
templates/: base.html  home.html  profile.html
templates/account/: login.html  signup.html
templates/includes/: header.html  notifications.html
