[project]
name = "blogermenia-djnago"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
